# kingdom

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  THIRD_PARTY_LICENSES.md  conftest.py  pyproject.toml  pytest.ini  ticket
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codex/prompts/: review.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codex.yml  release.yml
.kd/: .gitignore  config.json  init-worktree.sh
.kd/archive/backlog/tickets/: 25c3.md  3c43.md  3d28.md  71f0.md  770e.md  92e1.md  b505.md  e3be.md  e440.md  ecf7.md  kin-92e1.md
.kd/archive/breakdown-improvement/: design.md
.kd/archive/breakdown-improvement/tickets/: kin-2189.md  kin-253b.md  kin-6422.md  kin-8084.md
.kd/archive/cli-output-cleanup/tickets/: 3dd3.md  3f60.md  4096.md  5bcd.md  b202.md  c8a6.md  db41.md  e94d.md  kin-3dd3.md  kin-4096.md  kin-c8a6.md  kin-db41.md  kin-e94d.md
.kd/archive/feature-code-quality/: breakdown.md
.kd/archive/feature-code-quality/tickets/: 14d4.md  35c0.md  7bd0.md  8016.md  98c6.md  9fe2.md  kin-14d4.md  kin-35c0.md  kin-7bd0.md  kin-8016.md  kin-98c6.md  kin-9fe2.md
.kd/archive/fix-subagent-calls/tickets/: bf53.md
.kd/archive/mvp/: breakdown.md  design.md
.kd/archive/mvp/tickets/: 0073.md  00c0.md  0bb1.md  1ecc.md  295e.md  2cbb.md  3158.md  31c5.md  32ee.md  36d3.md  3d19.md  43a7.md  4625.md  49f1.md  4a5e.md  55a3.md  62bc.md  6fc1.md  7515.md  763f.md  813c.md  8162.md  81fd.md  823b.md  8472.md  8613.md  87e7.md  912c.md  921a.md  9490.md  94cb.md  96ab.md  (+80 more)
.kd/archive/ticket-management-ux/: learnings.md
.kd/backlog/tickets/: 02b5.md  03b1.md  0622.md  0817.md  083b.md  0984.md  0e99.md  101d.md  1147.md  115f.md  134d.md  19b6.md  1c4b.md  1e3d.md  1fa5.md  2316.md  24a5.md  26ce.md  27ce.md  2819.md  2ede.md  3269.md  377b.md  3860.md  3ad1.md  3c43.md  3c59.md  3d28.md  3e60.md  41fb.md  4404.md  4884.md  4994.md  4b4d.md  4c55.md  4d5d.md  50c7.md  5143.md  520a.md  5391.md  (+106 more)
.kd/branches/agent-skill/: design.md
.kd/branches/backlog-clear/: breakdown.md  design.md
.kd/branches/bugfixes-and-minor-features/: design.md
.kd/branches/cleanup-backlog-batch-fix-workflow-issues/: design.md
.kd/branches/cli-output-cleanup/: design.md
.kd/branches/config-system/: breakdown.md  design.md
.kd/branches/council-improvements/: design.md
.kd/branches/feature-code-quality/: design.md
.kd/branches/fix-subagent-calls/: design.md  learnings.md
.kd/branches/kd-chat/: breakdown.md  design.md
.kd/branches/peasant-fixes/: design.md
.kd/branches/peasant-worktree-optional/: design.md
.kd/branches/polish/: design.md  plan.md
.kd/branches/ready-tickets-batch/: breakdown.md  design.md
.kd/branches/refactor-multi-agent/: design.md
.kd/branches/ticket-management-ux/: design.md  learnings.md
.kd/runs/folders/: design.md
.tickets/: kin-0bb1.md  kin-1ecc.md  kin-295e.md  kin-2cbb.md  kin-3158.md  kin-31c5.md  kin-3d19.md  kin-43a7.md  kin-4625.md  kin-49f1.md  kin-4a5e.md  kin-55a3.md  kin-62bc.md  kin-6fc1.md  kin-763f.md  kin-813c.md  kin-8162.md  kin-8472.md  kin-8613.md  kin-912c.md  kin-921a.md  kin-9490.md  kin-96ab.md  kin-9758.md  kin-9d8e.md  kin-a007.md  kin-a8ac.md  kin-aa30.md  kin-aa3d.md  kin-ace6.md  kin-af68.md  kin-b76d.md  kin-b8f2.md  kin-c039.md  kin-c6d0.md  kin-cb6b.md  kin-cbeb.md  kin-ce7d.md  kin-cf39.md  kin-d0b5.md  (+4 more)
docs/: MVP-plan.md  MVP.md  architecture.md  backlog.md  chat-tui-polish-audit.md  cli-skill-architecture.md  council-as-supervisor.md  council-design.md  designing_logs.md  dispatch-cli-design-v2.md  dispatch-design.md  install.md  multi-agent-design-v3.md  multi-agent-redesign.md  mvp-next-step-design.md  publish-checklist.md  tech-stack.md
docs/archive/: MVP-breakdown.md  MVP.md  design_breakdown_polish.md  designing_logs.md  dispatch-design.md  gpt-pro-design.md  gpt-pro-v2.md  message-passing-design.md  multi-agent-system-deep-dive.md  mvp-next-step-design.md  tech-stack.md
docs/blogs/: claude-code-teams.md  gastown.md  ralph_loops.md
scripts/: add_submodule.py  smoke.sh
skills/kingdom/: SKILL.md
skills/kingdom/references/: council.md  peasants.md  tickets.md
src/kingdom/: __init__.py  __main__.py  agent.py  breakdown.py  cli.py  config.py  design.py  hand.py  harness.py  parsing.py  plan.py  session.py  state.py  synthesis.py  thread.py  ticket.py  tmux.py
src/kingdom/council/: __init__.py  base.py  bundle.py  claude.py  codex.py  council.py  cursor.py  worker.py
src/kingdom/tui/: __init__.py  app.py  clipboard.py  poll.py  widgets.py
tests/: conftest.py  test_agent.py  test_breakdown.py  test_cli.py  test_cli_council.py  test_cli_design_breakdown.py  test_cli_peasant.py  test_cli_status.py  test_cli_ticket.py  test_cli_ticket_current.py  test_cli_whoami.py  test_config.py  test_council.py  test_design.py  test_done.py  test_harness.py  test_init.py  test_parsing.py  test_session.py  test_skill.py  test_state.py  test_synthesis.py  test_thread.py  test_ticket.py  test_tmux.py  test_tui.py  test_tui_clipboard.py  test_tui_integration.py  test_tui_poll.py  test_tui_reply.py  test_tui_thinking_persistence.py  test_tui_widgets.py
(+926 files in other folders)
