[project]
name = "kingdom-cli"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.scripts]
kd = "kingdom.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
chat = [
    "textual>=7.5.0",
]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "ruff>=0.8.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["third-party", ".kd"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear (catches common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize syntax)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (let formatter handle)
    "SIM108", # ternary operators (sometimes less readable)
]
