[project]
name = "kingdom-cli"
version = "0.1.1"
description = "A git-native CLI that helps you plan and ship software by running multi-model AI design councils, turning outcomes into tickets, and executing work through agent workers."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "James Robinson-Bohnslav" }]
keywords = ["cli", "ai", "development", "workflow", "agents", "multi-model", "tickets"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Environment :: Console",
]
dependencies = [
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/jbohnslav/kingdom"
Repository = "https://github.com/jbohnslav/kingdom"
Issues = "https://github.com/jbohnslav/kingdom/issues"

[project.scripts]
kd = "kingdom.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
chat = [
    "textual>=7.5.0",
]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["third-party", ".kd"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear (catches common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize syntax)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (let formatter handle)
    "SIM108", # ternary operators (sometimes less readable)
]
